--- a/index.html
+++ b/index.html
@@ -15,10 +15,27 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <h1>
-
-        </h1>
+        <div class="container">
+          <div class="pc">
+          <h1>
+            <img src="/img/header_logo.png" alt="biscareer" class="img-fluid">
+          </h1>
+          <h2>
+            <img src="/img/header_h2.png" alt="ビジキャリは3か月で人生を変える" class="img-fluid">
+          </h2>
+          <h3>
+            <img src="/img/header_h3.png" alt="プロの転職コーチング" class="img-fluid">
+          </h3>
+          <button>
+            <img src="/img/header_button.png" alt="ボタン" class="img-fluid">
+          </button>
+          <h4>
+            <img src="/img/header_h4.png" alt="ポイント" class="img-fluid">
+          </h4>
+        </div>
+        <div class="sp">
+          <img src="/img/header_txt_sp.png" alt="ヘッダースマホ" class="img-fluid">
+        </div>
       </div>
     </header>
   <main>
@@ -26,7 +43,7 @@
       <div class="container">
         <div class="perfomance__left">
           <h2>
-            <img src="img/header_txt.png" alt="バリキャリの転職実績 2020年の転職実績 78万名" class="img-fluid">
+            <img src="img/perfomance_txt.png" alt="バリキャリの転職実績 2020年の転職実績 78万名" class="img-fluid">
           </h2>
         </div>
         <div class="perfomance__right">
@@ -56,6 +73,75 @@
         </div>
       </div>
     </section>
+
+    <section class="solution">
+      <div class="container">
+        <h2>
+          <img src="img/solution_h2.png" alat="そんなお悩みをバリキャリが解決します！" class="img-fluid">
+        </h2>
+        <div class="pc">
+          <img src="img/solution_img.png" alt="解決図" class="img-fluid">
+        </div>
+        <div class="sp">
+            <img src="/img/solution_img_sp.png" alt="スマホ解決図" class="img-fluid">
+        </div>
+      </div>
+    </section>
+
+    <section class="agent">
+      <div class="container">
+        <h2>
+          <img src="img/agent_h2.png" alt="そんなお悩みをバリキャリが解決します！" class="img-fluid">
+        </h2>
+        <div class="pc">
+          <img src="/img/agent_img.png" alt="エージェント紹介" class="img-fluid">
+        </div>
+        <div class="sp">
+          <img src="/img/agent_1_sp.png" alt="エージェント1" class="img-fluid">
+          <img src="/img/agent_2_sp.png" alt="エージェント2" class="img-fluid">
+          <img src="/img/agent_3_sp.png" alt="エージェント3" class="img-fluid">
+        </div>
+      </div>
+    </section>
+
+    <section class="review">
+      <div class="container">
+        <h2>
+          <img src="/img/review_h2.png" alt="利用者の声" class="img-fluid">
+        </h2>
+        <div class="pc">
+          <img src="/img/review_img.png" alt="レビュー" class="img-fluid">
+        </div>
+        <div class="sp">
+          <img src="/img/review_1_sp.png" alt="レビュー1" class="img-fluid">
+          <img src="/img/review_2_sp.png" alt="レビュー2" class="img-fluid">
+          <img src="/img/review_3_sp.png" alt="レビュー3" class="img-fluid">
+        </div>
+      </div>
+    </section>
+
+    <section class="flow">
+      <div class="container">
+        <h2>
+          <img src="/img/flow_h2.png" alt="流れ" class="img-fluid">
+        </h2>
+        <div class="pc">
+          <img src="/img/flow_img.png" alt="流れ図" class="img-fluid">
+        </div>
+        <div class="sp">
+          <img src="/img/flow_img_sp.png" alt="スマホ流れ図" class="img-fluid">
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <button>
+        <a href="#"><img src="/img/btn.png" alt="ボタン" class="img-fluid">
+        </a>
+      </button>
+      </div>
+    </footer>
   </main>
 
     <!-- Optional JavaScript; choose one of the two! -->
